Fixed some overflowing problems

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,17 @@ html {
 
 .header--subtitle {
   font-size: 1.5rem;
+  line-height: 1.3;
   margin-bottom: 0;
+  margin: 0 auto;
+  width: 65%;
+}
+
+@media (max-width: 1500px) {
+  .header--subtitle {
+    width: 80%;
+    line-height: 1.4;
+  }
 }
 
 @media (max-width: 990px) {
@@ -35,6 +45,8 @@ html {
 
   .header--subtitle {
     font-size: 1.3rem;
+    width: 90%;
+    line-height: 1.5;
   }
 }
 
@@ -49,6 +61,8 @@ html {
 
   .header--subtitle {
     font-size: 1rem;
+    width: 100%;
+    line-height: 1.6;
   }
 }
 
@@ -72,6 +86,7 @@ html {
   max-width: 100%;
   background: #CADFFA;
   padding: 40px;
+  align-content: flex-start;
 }
 
 @media (max-width: 550px) {
@@ -86,10 +101,8 @@ html {
   background: #EEEEFA;
   padding: 10px;
   box-shadow: 3px 3px 0px 0px rgba(50, 50, 50, 0.05);
-  max-width: 100%;
   display: flex;
   flex-direction: column;
-  width: auto;
   flex: 1 1 auto;
   margin: 10px;
   cursor: pointer;
